--- a/.dockerignore
+++ b/.dockerignore
@@ -26,8 +26,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -62,7 +60,7 @@ db.sqlite3-journal
 
 # Flask stuff:
 instance/
-.webassets-cache
+.webassets-cache/
 
 # Scrapy stuff:
 .scrapy
@@ -82,16 +80,10 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
@@ -139,13 +131,9 @@ cython_debug/
 # png
 *.png
 
-.idea
-
 # config
 config.py
 config_example.py
-
-# md
 README.md
 README.linux.md
 配置文件说明.md
@@ -153,11 +141,12 @@ README.linux.md
 # dir
 img/
 tmp/
+logs/
 
 # docker
 .dockerignore
 Dockerfile
 
 # git
-.gitignore
 .git
+.gitignore
