--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,107 @@
 version: '3.8'
 
+# 服务定义
 services:
-  app:
+  # Web管理界面服务
+  web:
+    # 容器名称
+    container_name: auto-update-jd-cookie-web
+    # 构建配置
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: auto-update-jd-cookie
+    # 端口映射：宿主机端口:容器端口
     ports:
       - "8686:8000"
+    # 卷挂载
     volumes:
       - ./config.json:/app/config.json
       - ./logs:/app/logs
       - ./tmp:/app/tmp
+      - ./myocr_v1.onnx:/app/myocr_v1.onnx
+      - ./charsets.json:/app/charsets.json
+    # 环境变量
     environment:
       - PYTHONUNBUFFERED=1
       - CONFIG_PATH=/app/config.json
       - LOG_LEVEL=INFO
+    # 重启策略
     restart: unless-stopped
+    # 网络配置
     networks:
       - app-network
+    # 启动命令
     command: ["python", "-m", "uvicorn", "web.app:app", "--host", "0.0.0.0", "--port", "8000"]
+    # 健康检查
+    healthcheck:
+      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/health', timeout=5)"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    # 资源限制
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 256M
 
+  # 定时任务服务
   scheduler:
+    # 容器名称
+    container_name: auto-update-jd-cookie-scheduler
+    # 构建配置
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: auto-update-jd-cookie-scheduler
+    # 卷挂载
     volumes:
       - ./config.json:/app/config.json
       - ./logs:/app/logs
       - ./tmp:/app/tmp
+      - ./myocr_v1.onnx:/app/myocr_v1.onnx
+      - ./charsets.json:/app/charsets.json
+    # 环境变量
     environment:
       - PYTHONUNBUFFERED=1
       - CONFIG_PATH=/app/config.json
       - LOG_LEVEL=INFO
+    # 重启策略
     restart: unless-stopped
+    # 网络配置
     networks:
       - app-network
+    # 启动命令
     command: ["python", "schedule_main.py"]
+    # 健康检查
+    healthcheck:
+      test: ["CMD", "python", "-c", "import os; exit(0) if os.path.exists('/app/config.json') else exit(1)"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+    # 资源限制
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 512M
+        reservations:
+          cpus: '0.5'
+          memory: 256M
 
+# 网络配置
 networks:
   app-network:
     driver: bridge
+    name: auto-update-jd-cookie-network
+
+# 卷配置
+volumes:
+  config-data:
+    name: auto-update-jd-cookie-config
+  logs-data:
+    name: auto-update-jd-cookie-logs
+  tmp-data:
+    name: auto-update-jd-cookie-tmp
